# NewsFeed

./: .env_vars  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  dockerfile  environment_droplet.yml  ig_api.db  index.html  main.py  news_api.db  openapi.json  path  poetry.toml  pyproject.toml  requirements.txt  test_main.py
.github/hooks/: .pre-commit-config.yaml
.github/workflows/: docker-image.yml  main.yml
auth/: authentication.py  oauth2.py
db/: database.py  db_comment.py  db_post.py  db_user.py  models.py
env/: pyvenv.cfg
env/Scripts/: Activate.ps1  activate  activate.bat
routers/: comment.py  post.py  user.py
src/: logging.py  main.py
src/auth/: authentication.py  oauth2.py
src/db/: database.py  db_comment.py  db_post.py  db_user.py  hashing.py  models.py
src/routers/: comment.py  post.py  schemas.py  user.py
src/secrets/: SECRET_KEY
tests/: conftest.py  test_comment.py  test_main.py  test_post.py  test_user.py
